# RPi_WeatherStation

./: CMakeLists.txt  README.md  WeatherStation.cpp  WeatherStation.h  toolchain-rpi.cmake
Abstract/: ConnectionAC.h  SensorAC.h  SensorDataAC.h
Concrete/: SensorData.h  WeatherData.cpp  WeatherData.h
Concrete/Connections/: Ethernet.h
Concrete/SensorData/: BarometricData.h  HumidityData.h  SensorData.h  TempData.h  WindData.h
Concrete/Sensors/: BarometricSensor.h  HumiditySensor.h  RainSensor.h  SensorIncludes.h  Sensors.h  TempSensor.h  WindSensor.h
Factories/: ConnectionFactory.h  SensorDataFactory.h  SensorFactory.cpp  SensorFactory.h  SensorManager.h
Interfaces/: ConnectionIF.h  SensorDataIF.h  SensorIF.h
Managers/: SensorManager.cpp  SensorManager.h
